--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Arjun Devarajan
-description: Trying to treat people well
+description: Doing my best to treat people well
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
